# bitmap-generator

./: .gitmodules  CMakeLists.txt  drawFigure.puml
.github/workflows/: cmake.yml
docs/: Readme.md  drawFigure.puml
src/: Readme.md  main.c
src/bitmap_generator_lib/: CMakeLists.txt  drawing_utils.c  drawing_utils.h  figures.c  figures.h  printing_utils.c  printing_utils.h  utils.h
test/: CMakeLists.txt  DrawingUtilsTest.cpp  PrintingUtilsTest.cpp
